--- a/index.html
+++ b/index.html
@@ -3,5 +3,14 @@
 <title>GitTest</title>
 </head>
 <body>
+  <h2>Git Commands</h2>
+  <ul>
+    <li>git cloone</li>
+    <li>git status</li>
+    <li>git add -A</li>
+    <li>git commit -m "msg"</li>
+    <li>git push<li>
+    <li>git pull</li>
+  </ul>
 </body>
 </html>
