--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <li>git pull</li>
   </ul>
 
+  <h2>Git Commands</h2>
+  <ul>
+  	<li>git brachch</li>
+  	<li>git branch brance1</li>
+  	<li>git checkout branch1</li>
+  	<li>git </li>
+  </ul>
+
   <div>map</div>
 </body>
 </html>
